# aiocomfoconnect

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: ci.yml
aiocomfoconnect/: __init__.py  __main__.py  bridge.py  comfoconnect.py  const.py  discovery.py  exceptions.py  properties.py  sensors.py  util.py
aiocomfoconnect/protobuf/: nanopb_pb2.py  zehnder_pb2.py
docs/: PROTOCOL-PDO.md  PROTOCOL-RMI.md  PROTOCOL.md
protobuf/: zehnder.proto
script/: decode_pcap.py
script/tcpsession/: tcpsession.py
tests/: conftest.py  test_bridge.py  test_comfoconnect.py  test_integration.py  test_util.py
