[tool.poetry]
name = "aiocomfoconnect"
version = "0.1.1"
description = ""
authors = ["Michaël Arnauts <michael.arnauts@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/michaelarnauts/aiocomfoconnect"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.0"
protobuf = "^4.21.9"
nanopb = "^0.4.6"

[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.50.0"
dpkt = "^1.9.8"
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 180